all the content changes are done

--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
                         <!-- Title -->
                         <h3 class="text-lg font-bold mb-2">Join the workshop & learn</h3>
                         <!-- Description -->
-                        <p class="text-gray-300 text-sm">Start your SQL journey by completing the task and get the PASS for the workshop.</p>
+                        <p class="text-gray-300 text-sm">Start your SQL journey by submitting the task and get the PASS for the workshop.</p>
                     </div>
                 </div>
             </div>
@@ -819,7 +819,7 @@
                         <div class="feature-icon mr-4">🖥️</div>
                         <div>
                             <h3 class="text-lg font-bold glow-text">LAPTOP STUDENTS</h3>
-                            <p class="text-gray-300 text-sm">Step-by-step guide to install MySQL on Windows and Compeleting TASK</p>
+                            <p class="text-gray-300 text-sm">Step-by-step guide to complete the TASK on Laptop and install MySQL on Windows </p>
                         </div>
                     </div>
                     </a>
@@ -832,7 +832,7 @@
                         <div class="feature-icon mr-4">📱</div>
                         <div>
                             <h3 class="text-lg font-bold glow-text">NON-LAPTOP STUDENTS</h3>
-                            <p class="text-gray-300 text-sm"> Watch the video and compelete the TASK </p>
+                            <p class="text-gray-300 text-sm">Watch the video and complete the TASK. </p>
                         </div>
                     </div>
                     </a>
@@ -855,28 +855,28 @@
                 <div class="card text-center stagger-item hover:scale-105 transition-transform">
                     <div class="feature-icon mx-auto">1</div>
                     <h3 class="font-bold">1st & 2nd Year Students</h3>
-                    <p class="text-gray-300 text-sm">Build strong foundation now</p>
+                    <p class="text-gray-300 text-sm">Build a strong foundation at the beginning of your career.</p>
                 </div>
 
                 <!-- Audience 2: CSE/IT -->
                 <div class="card text-center stagger-item hover:scale-105 transition-transform">
                     <div class="feature-icon mx-auto">2</div>
                     <h3 class="font-bold">CSE/IT/Data Science</h3>
-                    <p class="text-gray-300 text-sm">Essential for your career</p>
+                    <p class="text-gray-300 text-sm">Unlock your potential! Acquire the core skills needed to thrive in these high-demand fields.</p>
                 </div>
 
                 <!-- Audience 3: All Branches -->
                 <div class="card text-center stagger-item hover:scale-105 transition-transform">
                     <div class="feature-icon mx-auto">3</div>
                     <h3 class="font-bold">All Engineering Branches</h3>
-                    <p class="text-gray-300 text-sm">Data skills are universal</p>
+                    <p class="text-gray-300 text-sm">Data is everywhere! Enhance your engineering knowledge with essential data skills.</p>
                 </div>
 
                 <!-- Audience 4: Beginners -->
                 <div class="card text-center stagger-item hover:scale-105 transition-transform">
                     <div class="feature-icon mx-auto">4</div>
                     <h3 class="font-bold">Complete Beginners</h3>
-                    <p class="text-gray-300 text-sm">Never written a query? Perfect!</p>
+                    <p class="text-gray-300 text-sm">Start from scratch! Learn the basics of SQL and build confidence in your abilities</p>
                 </div>
             </div>
         </div>
@@ -892,23 +892,23 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Testimonial 1 -->
                 <div class="testimonial stagger-item">
-                    <p class="mb-4 italic">"I was completely new to SQL, and NEXUS made it so easy to understand. The 3-day workshop covered everything I needed!"</p>
-                    <p class="font-bold glow-text">- Harshit Patel</p>
-                    <p class="text-sm text-gray-400">CSE Student, 2024</p>
+                    <p class="mb-4 italic">"I was completely new to version control when I joined the Git & GitHub workshop. The mentors at SCET Nexus made everything so simple and approachable. They was always ready to help with our doubts"</p>
+                    <p class="font-bold glow-text">- Nabiya Ahmed</p>
+                    <p class="text-sm text-gray-400">CSE Student</p>
                 </div>
 
                 <!-- Testimonial 2 -->
                 <div class="testimonial stagger-item">
-                    <p class="mb-4 italic">"Best decision I made. The mentors were amazing, and I landed an internship within a month!"</p>
-                    <p class="font-bold glow-text">- Ananya Patel</p>
-                    <p class="text-sm text-gray-400">Data Analyst, TechCorp</p>
+                    <p class="mb-4 italic">"Coming from ECE background, I never thought I could learn programming so quickly. The C Programming workshop at SCET Nexus was perfectly paced. Speakers broke down every concept step by step - the best part was the mentor support throughout!"</p>
+                    <p class="font-bold glow-text">- Zaid khan</p>
+                    <p class="text-sm text-gray-400">ECE, 2nd year</p>
                 </div>
 
                 <!-- Testimonial 3 -->
                 <div class="testimonial stagger-item">
-                    <p class="mb-4 italic">"From mechanical branch but needed data skills. This workshop gave me confidence. Highly recommend!"</p>
-                    <p class="font-bold glow-text">- Vikram Kumar</p>
-                    <p class="text-sm text-gray-400">Mech Student, Shadan</p>
+                    <p class="mb-4 italic">"What I love about SCET Nexus workshops is that you always learn new things, no matter your skill level. The Fundamentals of Programming workshop gave me a solid foundation, and the friendly mentors made asking questions so easy!"</p>
+                    <p class="font-bold glow-text">- Mirza </p>
+                    <p class="text-sm text-gray-400">IT , 3rd year</p>
                 </div>
             </div>
         </div>
